tests/paczka1/small_fuzzy/65172845.err
Error in line 7: 9rH S430 288,6
Error in line 6: S430 S863 65,6
Error in line 8: 9rH S863 76,2
